<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.progetto.ingegneria.appalta.Activities.InitActivity"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkred"
                android:textSize="@dimen/text_size_lg"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_md"
                android:layout_marginBottom="@dimen/margin_md"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkred"
                android:textSize="@dimen/text_size_md"
                android:text="@string/presentationTitle1"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_md"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/presentation1"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_md"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/presentation2"
                android:layout_marginBottom="@dimen/margin_md"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkred"
                android:textSize="@dimen/text_size_md"
                android:text="@string/presentationTitle2"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_md"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/presentation3"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_md"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/presentation4"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_md"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/presentation5"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_md"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/presentation6"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:background="@color/primary"
                android:textColor="@color/window_backgrund"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_md"
                android:layout_marginBottom="@dimen/margin_md"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
