<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/alert_horizontal_padding"
        android:paddingRight="@dimen/alert_horizontal_padding"
        android:paddingBottom="@dimen/alert_vertical_padding">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_city_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_citta"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_title_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_titolo"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_type_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_type"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_cod_iva_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_cod_iva"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_company_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_company"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_anno_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_anno"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_min_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_min"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_max_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/insert_max"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/alert_vertical_padding">

            <EditText
                android:id="@+id/filter_search_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="@string/insert_search"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>