<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/selected_id"
                android:textColor="@color/darkred"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/textId"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/selected_company"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/textCompany"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/selected_citta"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textCitta"
                    android:layout_weight="2" />

        </LinearLayout>

</LinearLayout>